force-app/main/default/objects/Contact/fields/Contact_Classification__c.field-meta.xml
<CustomField>
    <fullName>Contact_Classification__c</fullName>
    <description>A way to classify the type of contact</description>
    <inlineHelpText>Select the primary Contact type</inlineHelpText>
    <label>Contact Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
                <default>true</default>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Economic Development</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>NS Internal</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>