force-app/main/default/objects/Contact/fields/Notification_Delivery_Days__c.field-meta.xml
<CustomField>
    <fullName>Notification_Delivery_Days__c</fullName>
    <description>contact notification subscription window days of the week preference</description>
    <label>Notification Delivery Days</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Days_of_the_week</valueSetName>
    </valueSet>
</CustomField>