force-app/main/default/objects/Contact/fields/Notification_Delivery_Hour_Ending__c.field-meta.xml
<CustomField>
    <fullName>Notification_Delivery_Hour_Ending__c</fullName>
    <label>Notification Delivery Hour Ending</label>
    <length>4</length>
    <type>Text</type>
</CustomField>