force-app/main/default/objects/Contact/fields/Notification_Delivery_Hour_Starting__c.field-meta.xml
<CustomField>
    <fullName>Notification_Delivery_Hour_Starting__c</fullName>
    <description>ENS subscription window delivery hour starting</description>
    <label>Notification Delivery Hour Starting</label>
    <length>4</length>
    <type>Text</type>
</CustomField>