force-app/main/default/objects/Contact/fields/Notification_Delivery_Window_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Notification_Delivery_Window_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the contact has or has not subscribed to receive NS ENS notification.</description>
    <inlineHelpText>Whether the contact has or has not subscribed to receive NS ENS notification.</inlineHelpText>
    <label>Delivery Window Enabled</label>
    <type>Checkbox</type>
</CustomField>