force-app/main/default/objects/Contact/fields/Notification_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email_Address__c</fullName>
    <description>Email address used to deliver notification message to</description>
    <label>Notification Email Address</label>
    <type>Email</type>
</CustomField>