force-app/main/default/objects/Contact/fields/Notification_Email_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether contact subscribed to receive notification via email</description>
    <label>Notification Email Enabled</label>
    <type>Checkbox</type>
</CustomField>