force-app/main/default/objects/Contact/fields/Notification_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Notification_Phone_Number__c</fullName>
    <description>Mobile phone number used to received sms notification</description>
    <label>Notification Phone Number</label>
    <type>Phone</type>
</CustomField>