force-app/main/default/objects/Contact/fields/Notification_Push_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Notification_Push_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether  contact subscribed to receive notification via mobile push.</description>
    <label>Notification Push Enabled</label>
    <type>Checkbox</type>
</CustomField>