force-app/main/default/objects/Contact/fields/Notification_SMS_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Notification_SMS_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether contact subscribed to receive notification via SMS</description>
    <label>Notification SMS Enabled</label>
    <type>Checkbox</type>
</CustomField>