force-app/main/default/objects/Contact/fields/Notifications_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Notifications_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks is contact has subscribed to receive notification in AccessNS.</description>
    <inlineHelpText>Check is contact has subscribed to receive notification in AccessNS.</inlineHelpText>
    <label>Notifications Enabled</label>
    <type>Checkbox</type>
</CustomField>