force-app/main/default/objects/Contact/fields/NS_BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>NS_BusinessUnit__c</fullName>
    <description>Business Unit or Units who do business with that particular individual.</description>
    <inlineHelpText>Business Unit or Units who do business with that particular individual.</inlineHelpText>
    <label>Associated NS Business Unit(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Equipment Planning</fullName>
            </value>
            <value>
                <fullName>Intermodal</fullName>
            </value>
            <value>
                <fullName>Industrial Products</fullName>
            </value>
            <value>
                <fullName>Industrial Development</fullName>
            </value>
            <value>
                <fullName>OSS</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Revenue Accounting</fullName>
            </value>
            <value>
                <fullName>Revenue Waybilling</fullName>
            </value>
            <value>
                <fullName>Unit Train</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>