force-app/main/default/objects/Contact/fields/NS_CaseCount__c.field-meta.xml
<CustomField>
    <fullName>NS_CaseCount__c</fullName>
    <description>Count the total number of Cases created for the Contact</description>
    <label>Total Case Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>