force-app/main/default/objects/Contact/fields/NS_ClassCode__c.field-meta.xml
<CustomField>
    <fullName>NS_ClassCode__c</fullName>
    <description>Class Code of Associated Account</description>
    <formula>Account.NS_ClassCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Class Code of Associated Account</inlineHelpText>
    <label>Class Code</label>
    <type>Text</type>
</CustomField>