force-app/main/default/objects/Contact/fields/NS_Commodity__c.field-meta.xml
<CustomField>
    <fullName>NS_Commodity__c</fullName>
    <description>To be populated from TYES (Integration)</description>
    <label>TYES Commodity</label>
    <length>60</length>
    <type>Text</type>
</CustomField>