force-app/main/default/objects/Contact/fields/NS_Commodity_UTS__c.field-meta.xml
<CustomField>
    <fullName>NS_Commodity_UTS__c</fullName>
    <description>Commodity data as from Unit Train Service IT system CTMS</description>
    <label>Unit Train Commodity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Crude Oil</fullName>
            </value>
            <value>
                <fullName>Ethanol</fullName>
            </value>
            <value>
                <fullName>Aggregate</fullName>
            </value>
            <value>
                <fullName>Environment</fullName>
            </value>
            <value>
                <fullName>Frac Sand</fullName>
            </value>
            <value>
                <fullName>Grain</fullName>
            </value>
            <value>
                <fullName>Misc</fullName>
            </value>
            <value>
                <fullName>Envirostone</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Metals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>