force-app/main/default/objects/Contact/fields/NS_ContactRole__c.field-meta.xml
<CustomField>
    <fullName>NS_ContactRole__c</fullName>
    <label>Contact Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>