force-app/main/default/objects/Contact/fields/NS_ContactStatus__c.field-meta.xml
<CustomField>
    <fullName>NS_ContactStatus__c</fullName>
    <description>Indicates whether the Contact is Active or Inactive for use.</description>
    <inlineHelpText>Contact Status denotes if Contact is active or inactive or requested for deactivation.</inlineHelpText>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Request Deactivation</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>