force-app/main/default/objects/Contact/fields/NS_ContactType__c.field-meta.xml
<CustomField>
    <fullName>NS_ContactType__c</fullName>
    <label>Contact Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>1st</fullName>
                <label>1st Shift</label>
            </value>
            <value>
                <fullName>2nd</fullName>
                <label>2nd Shift</label>
            </value>
            <value>
                <fullName>3rd</fullName>
                <label>3rd Shift</label>
            </value>
            <value>
                <fullName>Weekend</fullName>
            </value>
            <value>
                <fullName>24 Hour</fullName>
            </value>
            <value>
                <fullName>1st shift old</fullName>
                <isActive>false</isActive>
                <label>1st</label>
            </value>
            <value>
                <fullName>2nd shift old</fullName>
                <isActive>false</isActive>
                <label>2nd</label>
            </value>
            <value>
                <fullName>3rd shift old</fullName>
                <isActive>false</isActive>
                <label>3rd</label>
            </value>
            <value>
                <fullName>Primary</fullName>
                <isActive>false</isActive>
                <label>Primary</label>
            </value>
            <value>
                <fullName>Weekends</fullName>
                <isActive>false</isActive>
                <label>Weekends</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>