force-app/main/default/objects/Contact/fields/NS_ControllingStation__c.field-meta.xml
<CustomField>
    <fullName>NS_ControllingStation__c</fullName>
    <description>Controlling Station of Associated Account</description>
    <formula>Account.NS_ControllingStation__c</formula>
    <inlineHelpText>Controlling Station of Associated Account</inlineHelpText>
    <label>Controlling Station</label>
    <type>Text</type>
</CustomField>