force-app/main/default/objects/Contact/fields/NS_CustomerAccnt__c.field-meta.xml
<CustomField>
    <fullName>NS_CustomerAccnt__c</fullName>
    <description>Account Name of Account in which another Account is calling on behalf of OR in which Online Account creation has been initiated but the Account has not yet been on-boarded to Salesforce</description>
    <inlineHelpText>Account Name for which Contact should be associated to when the Account becomes available in Salesforce.</inlineHelpText>
    <label>Customer Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>