force-app/main/default/objects/Contact/fields/NS_Division__c.field-meta.xml
<CustomField>
    <fullName>NS_Division__c</fullName>
    <description>Indicates the OSS Division that is mapped to the Account associated with the Contact</description>
    <formula>Account.NS_OperatingStation__r.NS_DivisionCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the OSS Division that is mapped to the Account associated with the Contact</inlineHelpText>
    <label>Division</label>
    <type>Text</type>
</CustomField>