force-app/main/default/objects/Contact/fields/NS_Driver_Code_GAC__c.field-meta.xml
<CustomField>
    <fullName>NS_Driver_Code_GAC__c</fullName>
    <label>Driver Code/GAC</label>
    <length>10</length>
    <type>Text</type>
</CustomField>