force-app/main/default/objects/Contact/fields/NS_Driver_ID_CDL__c.field-meta.xml
<CustomField>
    <fullName>NS_Driver_ID_CDL__c</fullName>
    <label>Driver ID/CDL</label>
    <length>20</length>
    <type>Text</type>
</CustomField>