force-app/main/default/objects/Contact/fields/NS_FleetTeam__c.field-meta.xml
<CustomField>
    <fullName>NS_FleetTeam__c</fullName>
    <label>Fleet Team</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boxcars</fullName>
            </value>
            <value>
                <fullName>Metals</fullName>
            </value>
            <value>
                <fullName>Hoppers</fullName>
            </value>
            <value>
                <fullName>Privates</fullName>
            </value>
            <value>
                <fullName>Auto Parts</fullName>
                <isActive>false</isActive>
                <label>Auto Parts</label>
            </value>
            <value>
                <fullName>Private Cars</fullName>
                <isActive>false</isActive>
                <label>Private Cars</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>