force-app/main/default/objects/Contact/fields/NS_InternalContact__c.field-meta.xml
<CustomField>
    <fullName>NS_InternalContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Contact</label>
    <type>Checkbox</type>
</CustomField>