force-app/main/default/objects/Contact/fields/NS_MailingAddressDetails__c.field-meta.xml
<CustomField>
    <fullName>NS_MailingAddressDetails__c</fullName>
    <description>It is the combination of Shipping Street,City, State and Postal Code. It is created in order to show mailing address in Report.</description>
    <formula>MailingStreet &amp;&#39; &#39;&amp; MailingCity &amp;&#39; &#39;&amp; MailingState &amp;&#39; &#39;&amp; MailingCountry &amp;&#39; &#39;&amp; MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mailing Address Details</label>
    <type>Text</type>
</CustomField>