force-app/main/default/objects/Contact/fields/NS_MergeContactWith__c.field-meta.xml
<CustomField>
    <fullName>NS_MergeContactWith__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact with which to merge the current Contact</description>
    <inlineHelpText>Contact with which to merge the current Contact</inlineHelpText>
    <label>Merge Contact With</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.NS_ContactStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>