force-app/main/default/objects/Contact/fields/NS_MobileServiceProvider__c.field-meta.xml
<CustomField>
    <fullName>NS_MobileServiceProvider__c</fullName>
    <label>Mobile Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appalachia Wireless</fullName>
            </value>
            <value>
                <fullName>AT&amp;amp;T Wireless</fullName>
                <label>AT&amp;T Wireless</label>
            </value>
            <value>
                <fullName>Southernlinc</fullName>
            </value>
            <value>
                <fullName>Sprint</fullName>
            </value>
            <value>
                <fullName>T-Mobile</fullName>
            </value>
            <value>
                <fullName>US Cellular</fullName>
            </value>
            <value>
                <fullName>Verizon Wireless</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>