force-app/main/default/objects/Contact/fields/NS_Next_Valid_Survey_Time__c.field-meta.xml
<CustomField>
    <fullName>NS_Next_Valid_Survey_Time__c</fullName>
    <formula>NS_Time_Last_Survey_Sent__c + 30</formula>
    <label>Next Valid HF Survey Time</label>
    <type>DateTime</type>
</CustomField>