force-app/main/default/objects/Contact/fields/NS_OperatingStation__c.field-meta.xml
<CustomField>
    <fullName>NS_OperatingStation__c</fullName>
    <description>Operating Station number based on Account</description>
    <formula>Account.NS_OperatingStation__r.Name</formula>
    <inlineHelpText>Operating Station number based on Account</inlineHelpText>
    <label>Operating Station</label>
    <type>Text</type>
</CustomField>