force-app/main/default/objects/Contact/fields/NS_OSSContactRole__c.field-meta.xml
<CustomField>
    <fullName>NS_OSSContactRole__c</fullName>
    <description>It denotes the OSS Role in Contacts.</description>
    <label>OSS Account Contact Role</label>
    <length>30</length>
    <type>Text</type>
</CustomField>