force-app/main/default/objects/Contact/fields/NS_OtherPhone2Ext__c.field-meta.xml
<CustomField>
    <fullName>NS_OtherPhone2Ext__c</fullName>
    <label>Other Phone 2 Extension</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>