force-app/main/default/objects/Contact/fields/NS_OtherPhoneExt__c.field-meta.xml
<CustomField>
    <fullName>NS_OtherPhoneExt__c</fullName>
    <label>Other Phone Extension</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>