force-app/main/default/objects/Contact/fields/NS_PhysicalAddressDetails__c.field-meta.xml
<CustomField>
    <fullName>NS_PhysicalAddressDetails__c</fullName>
    <description>It is the combination of Physical Street,City, State and Postal Code.It is created in order to show Physical Address in report.</description>
    <formula>OtherStreet &amp;&#39; &#39;&amp; OtherCity &amp;&#39; &#39;&amp; OtherState &amp;&#39; &#39;&amp; OtherCountry &amp;&#39; &#39;&amp; OtherPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physical Address Details</label>
    <type>Text</type>
</CustomField>