force-app/main/default/objects/Contact/fields/NS_PrefConMethd__c.field-meta.xml
<CustomField>
    <fullName>NS_PrefConMethd__c</fullName>
    <description>Form of communication that the Contact would prefer to be used</description>
    <inlineHelpText>Form of communication that the Contact would prefer to be used</inlineHelpText>
    <label>Preferred Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work Phone</fullName>
            </value>
            <value>
                <fullName>Mobile Phone</fullName>
            </value>
            <value>
                <fullName>Other Phone 1</fullName>
            </value>
            <value>
                <fullName>Other Phone 2</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>