force-app/main/default/objects/Contact/fields/NS_PreferredName__c.field-meta.xml
<CustomField>
    <fullName>NS_PreferredName__c</fullName>
    <description>Preferred Name or nickname of Contact</description>
    <inlineHelpText>Preferred Name or nickname of Contact</inlineHelpText>
    <label>Preferred Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>