force-app/main/default/objects/Contact/fields/NS_PriorityContact__c.field-meta.xml
<CustomField>
    <fullName>NS_PriorityContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Executive Contact</label>
    <type>Checkbox</type>
</CustomField>