force-app/main/default/objects/Contact/fields/NS_RACF_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_RACF_ID__c</fullName>
    <label>RACF ID</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>