force-app/main/default/objects/Contact/fields/NS_Terminal_Privilege__c.field-meta.xml
<CustomField>
    <fullName>NS_Terminal_Privilege__c</fullName>
    <label>Terminal Privilege</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Revoked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>