force-app/main/default/objects/Contact/fields/NS_TextBusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>NS_TextBusinessUnit__c</fullName>
    <description>This field is for capturing Associated Business Units by a Process and then use the values for sharing rule to give business unit based access</description>
    <label>Business Unit</label>
    <type>TextArea</type>
</CustomField>