force-app/main/default/objects/Contact/fields/NS_Time_Last_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>NS_Time_Last_Survey_Sent__c</fullName>
    <description>Date/Time of the last time a contact was associated to a case which triggered a survey sent in Qualtrics.</description>
    <label>Time Last HF Survey Sent</label>
    <type>DateTime</type>
</CustomField>