force-app/main/default/objects/Contact/fields/NS_Valid_Intermodal_Survey_Time__c.field-meta.xml
<CustomField>
    <fullName>NS_Valid_Intermodal_Survey_Time__c</fullName>
    <description>This field calculates the next valid survey time once a high frequency rule is triggered for Intermodal Cases</description>
    <formula>NS_Time_Last_Survey_Sent__c + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid Intermodal HF Survey Time</label>
    <type>DateTime</type>
</CustomField>