force-app/main/default/objects/Contact/fields/NS_Work_Phone_Ext__c.field-meta.xml
<CustomField>
    <fullName>NS_Work_Phone_Ext__c</fullName>
    <description>This field has been made text instead of number to remove the coma.</description>
    <label>Work Phone Extension</label>
    <length>4</length>
    <type>Text</type>
</CustomField>