force-app/main/default/objects/Contact/fields/NSSales_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Country_Code__c</fullName>
    <label>Country Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>