force-app/main/default/objects/Contact/fields/NSSales_Lead_Created__c.field-meta.xml
<CustomField>
    <fullName>NSSales_Lead_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Created</label>
    <type>Checkbox</type>
</CustomField>