force-app/main/default/objects/Contact/fields/Opt_out_of_Surveys__c.field-meta.xml
<CustomField>
    <fullName>Opt_out_of_Surveys__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt out of Surveys?</label>
    <type>Checkbox</type>
</CustomField>