force-app/main/default/objects/Contact/fields/Priority_Customer__c.field-meta.xml
<CustomField>
    <fullName>Priority_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priority Customer</label>
    <type>Checkbox</type>
</CustomField>