force-app/main/default/objects/Contact/recordTypes/ANI_ONLY.recordType-meta.xml
<RecordType>
    <fullName>ANI_ONLY</fullName>
    <active>true</active>
    <description>&quot;Hidden&quot; ANI ONLY Contacts</description>
    <label>ANI ONLY</label>
</RecordType>