force-app/main/default/objects/Contact/recordTypes/ID_Contact.recordType-meta.xml
<RecordType>
    <fullName>ID_Contact</fullName>
    <active>true</active>
    <description>Record Type for Industrial Development Users to view contact</description>
    <label>ID Contact</label>
</RecordType>