force-app/main/default/objects/Contact/recordTypes/NS_Driver.recordType-meta.xml
<RecordType>
    <fullName>NS_Driver</fullName>
    <active>true</active>
    <label>Driver</label>
</RecordType>