force-app/main/default/objects/Contact/recordTypes/NS_GeneralContact.recordType-meta.xml
<RecordType>
    <fullName>NS_GeneralContact</fullName>
    <active>true</active>
    <description>Record Type for All Users to view contact</description>
    <label>General Contact</label>
</RecordType>