force-app/main/default/objects/Contact/recordTypes/NS_ReadOnlyInactiveContact.recordType-meta.xml
<RecordType>
    <fullName>NS_ReadOnlyInactiveContact</fullName>
    <active>true</active>
    <description>This Record Type will be visible for Inactive contacts</description>
    <label>Read Only Inactive Contact</label>
</RecordType>