force-app/main/default/objects/Contact/validationRules/NS_ANIOnlyAccountPhoneRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>NS_ANIOnlyAccountPhoneRequired</fullName>
    <active>true</active>
    <description>Requires both Account name and Work Phone to save the ANI ONLY Record.</description>
    <errorConditionFormula>IF( RecordType.DeveloperName =&#39;ANI_ONLY&#39; , OR(ISBLANK( AccountId ) , ISBLANK( Phone )),FALSE )</errorConditionFormula>
    <errorMessage>Please enter Account Name and Work Phone.</errorMessage>
</ValidationRule>