force-app/main/default/objects/Contact/validationRules/NS_ANIOnlyValidPhoneCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>NS_ANIOnlyValidPhoneCheck</fullName>
    <active>true</active>
    <description>Check valid work Phone for ANI Only contacts</description>
    <errorConditionFormula>AND( 
IF( 
NOT(ISBLANK( Phone ) ), 
NOT(REGEX(Phone ,&quot;(\\d){7}|(\\d){10}&quot;)), 
FALSE 
), 
RecordType.DeveloperName=&#39;ANI_ONLY&#39; 
)</errorConditionFormula>
    <errorMessage>Invalid Work Phone entered.</errorMessage>
</ValidationRule>