force-app/main/default/objects/Contact/validationRules/NS_CustomerAccountRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>NS_CustomerAccountRequired</fullName>
    <active>false</active>
    <description>Requires the user to populate Customer Account field before saving a Contact record if the Account Name field is blank.</description>
    <errorConditionFormula>IF(AND($Profile.Name!=&#39;System Administrator&#39;, RecordType.DeveloperName !=&#39;ANI_ONLY&#39;, Account.Name =null ),ISBLANK( NS_CustomerAccnt__c ) , false)</errorConditionFormula>
    <errorDisplayField>NS_CustomerAccnt__c</errorDisplayField>
    <errorMessage>Please enter the Account Name that this Contact should be associated to when the Account becomes available in ConnectNS.</errorMessage>
</ValidationRule>