force-app/main/default/objects/Contact/validationRules/NS_FirstNameRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>NS_FirstNameRequired</fullName>
    <active>true</active>
    <description>Requires the user to populate First Name field before saving a Contact record</description>
    <errorConditionFormula>AND(
 ISBLANK( FirstName ),
 RecordType.DeveloperName=&#39;NS_GeneralContact&#39;
)</errorConditionFormula>
    <errorMessage>Please enter First Name.</errorMessage>
</ValidationRule>