force-app/main/default/objects/Contact/validationRules/NS_ID_PhoneNumberCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>NS_ID_PhoneNumberCheck</fullName>
    <active>true</active>
    <description>It throws error if user enters invalid mobile phone or work phone or other phone</description>
    <errorConditionFormula>AND(
	OR(
		IF(
			NOT(ISBLANK( MobilePhone )), 
			NOT(REGEX(MobilePhone,&quot;(\\d){7}|(\\d){10}&quot;)),
			FALSE 
		),
		IF(
			NOT(ISBLANK(   Phone ) ),
			NOT(REGEX(Phone ,&quot;(\\d){7}|(\\d){10}&quot;)),
			FALSE 
		),
		IF(
			NOT(ISBLANK(  OtherPhone ) ), 
			NOT(REGEX(OtherPhone ,&quot;(\\d){7}|(\\d){10}&quot;)),
			FALSE 
		),
		IF(
			NOT(ISBLANK(  HomePhone ) ), 
			NOT(REGEX(HomePhone ,&quot;(\\d){7}|(\\d){10}&quot;)),
			FALSE 
		),
		IF(
			NOT(ISBLANK(  Fax ) ), 
			OR(REGEX(Fax ,&quot;(\\d){7}|(\\d){10}&quot;)),
			FALSE 
		)
		
	),
	NOT(RecordType.DeveloperName!=&#39;ID_Contact&#39;),
       
    !NSSales_Lead_Created__c	
)</errorConditionFormula>
    <errorMessage>Please ensure that all phone numbers are 7 digits or 10 digits with no dashes - or parenthesis ()</errorMessage>
</ValidationRule>