force-app/main/default/objects/Contact/validationRules/NS_InactivateContact.validationRule-meta.xml
<ValidationRule>
    <fullName>NS_InactivateContact</fullName>
    <active>true</active>
    <description>Prevents anyone but a System Admin and OSS Support from changing the Contact Status to “Inactive”</description>
    <errorConditionFormula>AND(
AND(NOT(OR($Profile.Name = &#39;System Administrator&#39;,$Profile.Name = &#39;OSS Support&#39;)),
ISPICKVAL(NS_ContactStatus__c ,&#39;Inactive&#39;),
ISCHANGED(NS_ContactStatus__c ))
,
AND(NOT(AND($Profile.Name = &#39;NS Integration User&#39;, RecordType.DeveloperName = &#39;NS_Driver&#39;)),
ISPICKVAL(NS_ContactStatus__c ,&#39;Inactive&#39;),
ISCHANGED(NS_ContactStatus__c ))
)</errorConditionFormula>
    <errorDisplayField>NS_ContactStatus__c</errorDisplayField>
    <errorMessage>Prevents anyone but a System Admin and OSS Support from changing the Contact Status to “Inactive”
[9/18/2019] NS Integration profile can inactivate Contact records with record type driver.</errorMessage>
</ValidationRule>